# leo.c

./: README.md  leo.c  leo.html  leo.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
apk/: settings.gradle
apk/app/: build.gradle
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/cpp/: CMakeLists.txt  leo_jni.c
apk/app/src/main/java/com/ariannamethod/leo/: BootReceiver.kt  LeoEngine.kt  LeoInputActivity.kt  LeoWidget.kt
apk/app/src/main/res/drawable/: ic_launcher_foreground.xml
apk/app/src/main/res/layout/: leo_widget.xml
apk/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
apk/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apk/app/src/main/res/xml/: leo_widget_info.xml
leotests/: test_leo.c
